add test for draw points using opengl2D

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,3 +130,4 @@ add_definitions(-DQT_MESSAGELOGCONTEXT)
 include_directories(system ${PROJECT_SOURCE_DIR}/3rd/include)
 
 add_subdirectory(src)
+add_subdirectory(test)
