--- a/test/gl_cloud_widget_2d/CMakeLists.txt
+++ b/test/gl_cloud_widget_2d/CMakeLists.txt
@@ -5,32 +5,21 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
-include_directories(gl_cloud_widget_2d)
+include_directories(${PROJECT_SOURCE_DIR}/src/gl_widget_2d/include)
 
-file(GLOB glcwSRCS gl_cloud_widget_2d/*.cc)
+file(GLOB mainHEADERS *.h)
 file(GLOB mainSRCS *.cc)
-list(APPEND SRCS ${mainSRCS} ${glcwSRCS})
+list(APPEND SRCS ${mainSRCS} ${mainHEADERS})
 
-set(target_name gldraw_points_2d)
+set(target_name test_gl_cloud_widget_2d)
 add_executable(${target_name} ${SRCS})
 
 # set_target_properties(${target_name} PROPERTIES DEBUG_POSTFIX "_d")
 target_link_libraries(${target_name} PRIVATE Qt5::Core Qt5::Widgets Qt5::OpenGL)
+target_link_libraries(${target_name} PRIVATE ${target_gl_widget_2d})
+message(STATUS ">>> Linking with ${target_gl_widget_2d}")
 
-if(WIN32)
-    if(MSVC)
-        set_target_properties(
-            ${target_name} PROPERTIES WIN32_EXECUTABLE YES LINK_FLAGS
-            "/ENTRY:mainCRTStartup")
-    elseif(CMAKE_COMPILER_IS_GNUCXX)
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mwindows") # Not tested
-    else()
-        message(SEND_ERROR "Unsupported Windows compiler! (Not MSVC or GCC)")
-    endif(MSVC)
-elseif(APPLE)
-    set_target_properties(${target_name} PROPERTIES MACOSX_BUNDLE YES)
-elseif(UNIX)
-# Nothing special required
-else()
-    message(SEND_ERROR "Unsupported platform! (Not Win32, Mac OS X or Unix)")
-endif(WIN32)
+set_target_properties(${target_name} PROPERTIES
+    WIN32_EXECUTABLE ON
+    MACOSX_BUNDLE ON
+)
