fix compile error: update define of GL_WIDGET_2D_LIB as private.

--- a/src/gl_widget_2d/CMakeLists.txt
+++ b/src/gl_widget_2d/CMakeLists.txt
@@ -11,7 +11,7 @@ file(GLOB HEADERS ${PROJECT_SOURCE_DIR}/include/gl_widget_2d/*.h)
 set(target_name "gl_widget_2d")
 add_library(${target_name} SHARED ${SRCS} ${HEADERS})
 target_link_libraries(${target_name} PRIVATE Qt5::Core Qt5::Widgets Qt5::OpenGL)
-target_compile_definitions(${target_name} PUBLIC -DGL_WIDGET_2D_LIB)
+target_compile_definitions(${target_name} PRIVATE -DGL_WIDGET_2D_LIB)
 
 # set_target_properties(${target_name} PROPERTIES CXX_VISIBILITY_PRESET "hidden")
 set(target_gl_widget_2d ${target_name} PARENT_SCOPE)
